--- a/templates/home.html
+++ b/templates/home.html
@@ -6,5 +6,7 @@
 <div>Welcome Back {{session["fname"]}}</div>
 {% endif %}
 
+<button onclick='window.location.href="/book";'>Book a Melon Tasting!</button>
+
     <script src="/static/js/home.js"></script>
 {% endblock %}
